--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1649,3 +1649,9 @@
 "gallery_filter_action_sheet_unsynced" = "Only unsynced";
 "contact_phase2_error_quota_restore" = "contact_phase2_error_quota_restore";
 "contact_phase2_error_quota_backup" = "contact_phase2_error_quota_backup";
+"contact_phase2_error_message" = "An unknown error was encountered. Please try again later.";
+"contact_phase2_result_backup_nav_bar_title" = "Back up";
+"contact_phase2_result_restore_nav_bar_title" = "Restore";
+"contact_phase2_result_delete_backup_nav_bar_title" = "Delete Back up";
+"contact_phase2_result_delete_duplicates_nav_bar_title" = "Delete Duplicates";
+"contact_phase2_result_delete_all_contacts_nav_bar_title" = "Delete Contacts";
