--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -412,14 +412,14 @@
 "You need to enable access to Contacts to continue" = "Devam etmek için Kişilere erişime izin vermeniz gerekli";
 "Cancel BackUp" = "Yedeklemeyi iptal et";
 "Clear BackUp" = "Yedeklemeyi temizle";
-"There are %d duplicated contacts." = "Cihazının kontak listesinde %d tekrarlayan kişi mevcut.";
+"There are %d duplicated contacts." = "Cihazının kontak listesinde %d tekrarlı kayıt mevcut.";
 "Are you sure you want to delete?" = "Silmek istediğine emin misin?";
-"This duplicated contacts will be deleted from your contacts." = "Tekrarlanmış kişilerin cihazının kontak listesinden silinecek.";
+"This duplicated contacts will be deleted from your contacts." = "Tekrarlı kayıtların cihazının kontak listesinden silinecek.";
 "%%%d Restored…" = "%%%d Geri yüklendi…";
 "%%%d Analyzed…" = "%%%d Analiz edildi…";
 "%%%d Backed up…" = "%%%d yedeklendi…";
 "Restored %d Contacts" = "Cihazında %d kontak var.";
-"%d Duplicated Contacts Deleted" = "Cihazının kontak listesinden %d tekrarlayan kişi silindi.";
+"%d Duplicated Contacts Deleted" = "Cihazının kontak listesinden %d tekrarlayan kayıt silindi.";
 "You have %d numbers on your contacts backup." = "lifebox'ında %d kişi var.";
 "This contact will be deleted from your contacts." = "Bu kişi kontak listenden silinecek.";
 "Upgrade" = "Yükselt";
@@ -614,7 +614,7 @@
 "You have not enough memory in your device" = "Bu işlemi yapabilmek için cihazında yeterli alan bulunmuyor.";
 "The purchase was canceled" = "Satın alma iptal edildi.";
 "The purchase in progress" = "Satın alma işlemi devam ediyor.";
-"You have no duplicated contacts!" = "Cihazının kontak listesinde tekrarlayan kişilerin yok!";
+"You have no duplicated contacts!" = "Cihazının kontak listesinde tekrarlı kayıt bulunamadı!";
 "Daily" = "Günlük";
 "Weekly" = "Haftalık";
 "Monthly" = "Aylık";
@@ -1518,7 +1518,7 @@
 "Already have an account?" = "Zaten hesabın var mı?";
 "already_have_account_title" = "Zaten hesabın var mı?";
 "contact_phase2_delete_duplicates_title" = "Tekrarlayanları sil";
-"contact_phase2_delete_duplicates_top_label" = "Telefonunda %d tekrarlayan kayıt var gibi görünüyor";
+"contact_phase2_delete_duplicates_top_label" = "Telefon rehberinde %d tekrarlı kayıt bulundu";
 "contact_phase2_delete_duplicates_delete_all" = "Tümünü Sil";
 "contact_phase2_delete_duplicates_count" = "%d Tekrarlı Kayıt";
 "contact_phase2_delete_duplicates_confirm_title" = "Tekrarlı kayıtlar silinsin mi?";
@@ -1538,9 +1538,9 @@
 "contact_phase2_contact_list_restore" = "Telefona Aktar";
 "contact_phase2_contact_list_delete_all" = "Tümünü Sil";
 "contact_phase2_restore_contacts_confirm_title" = "Telefona Aktar";
-"contact_phase2_restore_contacts_confirm_message" = "Telefon Rehberin, lifebox'ta yedeklediğin kayıtlar ile değiştirilecektir.\nDevam etmek ister misin?";
+"contact_phase2_restore_contacts_confirm_message" = "lifebox'ta yedeklediğin kayıtlar telefon rehberine aktarılacaktır.\nDevam etmek ister misin?";
 "contact_phase2_restore_contacts_progress_title" = "Telefona Aktar";
-"contact_phase2_restore_contacts_progress_message" = "Telefon Rehberin, lifebox'ta yedeklediğin kayıtlar ile değiştirilecektir!";
+"contact_phase2_restore_contacts_progress_message" = "lifebox'ta yedeklediğin kayıtlar telefon rehberine aktarılıyor";
 "contact_phase2_restore_contacts_success_title" = "Telefona Aktarım Tamamlandı";
 "contact_phase2_restore_contacts_success_message" = "lifebox'ta güvenle yedeklediğin kayıtların, telefonuna da başarıyla aktarıldı";
 "contact_phase2_delete_contacts_confirm_title" = "Yedeklemeni silmek ister misin?";
@@ -1558,13 +1558,13 @@
 "contact_phase2_backup_contacts_title" = "Kişilerini Yedekle";
 "contact_phase2_backup_contacts_message" = "Telefon rehberin de lifebox'ta güvende! Rehberindeki kişilerine dilediğin yerden, dilediğin cihazdan ulaşabilirsin.";
 "contact_phase2_backup_contacts_button" = "Şimdi Yedekle";
-"contact_phase2_small_card_backup_message" = "Yedeklemenin son güncellenediği tarih";
+"contact_phase2_small_card_backup_message" = "Yedeklemenin son güncellenediği tarih ";
 "contact_phase2_small_card_backup_button" = "Yedeklemeleri gör";
 "contact_phase2_small_card_duplicates_message" = "Telefonundaki tekrarlı kayıtları temizleyerek telefon rehberini düzenleyebilirsin.";
 "contact_phase2_small_card_duplicates_button" = "Telefonundaki tekrarlı kayıtları sil";
 "contact_phase2_big_card_backup_message" = "Telefon rehberindeki kayıtları da lifebox'ta güvenle sakla!";
 "contact_phase2_big_card_contacts" = "Kişiler";
-"contact_phase2_big_card_see_contacts_button" = "Kişilere bak";
+"contact_phase2_big_card_see_contacts_button" = "Kişilerini Gör";
 "contact_phase2_big_card_autobackup_format" = "Otomatik Yedekleme: %@";
 "contact_phase2_backup_progress_title" = "Kişilerin Yedekleniyor";
 "contact_phase2_backup_progress_message" = "Telefon rehberin de lifebox'ta güvende! Rehberindeki kişilerine dilediğin yerden, dilediğin cihazdan ulaşabilirsin.";
@@ -1576,7 +1576,7 @@
 "contact_phase2_delete_button" = "Sil";
 "contact_phase2_restore_popup_title" = "Telefona Aktar";
 "contact_phase2_delete_popup_title" = "Yedeklenenleri Sil";
-"contact_phase2_restore_popup_message" = "Telefon Rehberin, lifebox'ta yedeklediğin kayıtlar ile değiştirilecektir.\nDevam etmek ister misin?";
+"contact_phase2_restore_popup_message" = "lifebox'ta yedeklediğin kayıtlar telefon rehberine aktarılacaktır.\nDevam etmek ister misin?";
 "contact_phase2_delete_popup_message" = "Yedeklemelerin lifebox'tan silinecektir. Devam etmek istediğine emin misin?";
 "contact_phase2_history_cell_title" = "Kişiler";
 "contact_phase2_error_RemoteServer1101" = "Geçici bir hata oluştu. Lütfen tekrar deneyin.";
@@ -1609,9 +1609,9 @@
 "gallery_filter_action_sheet_all" = "";
 "gallery_filter_action_sheet_synced" = "";
 "gallery_filter_action_sheet_unsynced" = "";
-"contact_phase2_error_quota_restore" = "Sakalama alanında yer kalmadığı için işleme devam edemiyorsun. Saklama alanını yükseltebilir veya dosyalarını silerek saklama alanında yer açabilirsin.";
-"contact_phase2_error_quota_backup" = "Sakalama alanında yer kalmadığı için işleme devam edemiyorsun. Saklama alanını yükseltebilir veya dosyalarını silerek saklama alanında yer açabilirsin.";
-"contact_phase2_error_message" = "";
+"contact_phase2_error_quota_restore" = "Saklama alanında yer kalmadığı için işleme devam edemiyorsun. Saklama alanını yükseltebilir veya dosyalarını silerek saklama alanında yer açabilirsin.";
+"contact_phase2_error_quota_backup" = "Saklama alanında yer kalmadığı için işleme devam edemiyorsun. Saklama alanını yükseltebilir veya dosyalarını silerek saklama alanında yer açabilirsin.";
+"contact_phase2_error_message" = "Geçici bir hata oluştu. Lütfen tekrar deneyin.";
 "contact_phase2_result_backup_nav_bar_title" = "Yedekle";
 "contact_phase2_result_restore_nav_bar_title" = "Telefona Aktar";
 "contact_phase2_result_delete_backup_nav_bar_title" = "Yedeği Sil";
